[package]
name = "tuiw"
version = "0.1.2"
edition = "2024"
authors = ["Naoya Yamashita <conao3@gmail.com>"]
description = "TUI applications wrapper with tmux for headless operation"
repository = "https://github.com/conao3/rust-tuiw"
license = "Apache-2.0"
readme = "README.md"
keywords = ["tui", "tmux", "automation", "headless", "terminal"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "tuiw"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.43", features = ["process", "rt-multi-thread", "time"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
anyhow = "1.0"

[dev-dependencies]
tokio = { version = "1.43", features = ["macros"] }
